--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">NariKuy</string>
     <string name="image_dance_photo">image_dance_photo</string>
     <string name="traditional_name">Traditional Name</string>
+    <string name="img_cover_detail">image cover detail</string>
+    <string name="description">Description</string>
+    <string name="imgDance">imageDance</string>
 </resources>
