--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="img_cover_detail">image cover detail</string>
     <string name="description">Description</string>
     <string name="imgDance">imageDance</string>
+    <string name="created_by_aditiya_prayogo">Created by : Aditiya Prayogo</string>
 </resources>
