--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="description">Description</string>
     <string name="imgDance">imageDance</string>
     <string name="created_by_aditiya_prayogo">Created by : Aditiya Prayogo</string>
+    <string name="imagedancedetail">imageDanceDetail</string>
 </resources>
